syntax = "proto3";

package greek.gflow.user.v1;

import "google/protobuf/empty.proto";
import "google/protobuf/duration.proto";
import "google/api/annotations.proto";

option go_package = "gflow-kratos/api/user/v1;pb";

// The user service definition.
service User {
  rpc Login (LoginRequest) returns (LoginResponse) {
    option (google.api.http) = {
      post: "/v1/user/login"
      body: "*"
    };
  }

  rpc GetUsers (google.protobuf.Empty) returns (GetUsersResponse) {
    option (google.api.http) = {
      get: "/v1/users"
    };
  }
}

enum Status {
  ACTIVE = 0;
  INACTIVE = 1;
}

enum Gender {
  GENDER_NOT_SPECIFY = 0;
  MALE = 1;
  FEMALE = 2;
}

message UserDTO {
  string id = 1;
  string department_id = 2;
  string role_id = 3;
  Status stauts = 4;
  string avatar = 5;
  string name = 6;
  Gender gender = 7;
  string phone = 8;
  string email = 9;
  google.protobuf.Duration birthday = 10;
}

message LoginRequest {
  string phone = 1;
  string passworf = 2;
}

message LoginResponse {
  string token = 1;
}

message GetUsersResponse {
  repeated UserDTO user_dtos = 1;
}
